STYLE/ fixed style index

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,12 +13,15 @@
   <script>
     const menuIcon = document.querySelector('.hamburger-menu');
     const navbar = document.querySelector('.navbar');
+    const body = document.body;
     menuIcon.addEventListener('click', () => {
       navbar.classList.toggle('change');
+      if (navbar.classList.contains('change')) {
+        body.classList.add('hidden');
+      } else {
+        body.classList.add('show');
+      }
     })
-    // function navbarShape(line) {
-    //   line.classList.toggle("change");
-    // }
   </script>
 </body>
 </html>
