--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -3,10 +3,10 @@
 $dark-brown: #444440;
 $light-brown: #757570;
 $dark-blue: #A9B1B0;
-$light-blue: #B9C9C7;
+$medium-blue: #B9C9C7;
+$light-blue: #DBE7E5;
 $dark-cream: #F3E8DA;
 $light-cream: #F9F4EC;
-$light-blue: #DBE7E5;
 $gray: #CACAC3;
 $green: #E6ECDA;
 
