--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,13 +1,14 @@
 @import "colors";
 @import "navbar";
+
 body {
   background: $dark-cream;
-  color: black;
+  color: $dark-brown;
 }
 
 .banner {
   padding: 0;
-  margin-top: 1em;
+  margin-top: 5em;
   position: relative;
   min-height: 50vw;
   h1 {
@@ -19,16 +20,18 @@ body {
     }
   }
 }
-  .banner-line1 {
-    position: absolute;
-    left: 27%;
-    top: 0;
-  }
+
+.banner-line1 {
+  position: absolute;
+  left: 27%;
+  top: 0;
+}
   .banner-line2 {
     position: absolute;
     left: 30%;
     top: 3vw;
   }
+
   .banner-subtitle {
     display: flex;
     position: absolute;
@@ -56,6 +59,13 @@ body {
     min-height: 300vh;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .banner {
+    min-height: 60vh;
+  }
+}
+
 
 
 
