--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Mr+Dafoe&family=Roboto:wght@300;400;700&display=swap');
 
 $dark-brown: #444440;
 $light-brown: #757570;
