--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -8,44 +8,40 @@
       border-radius: 500px 500px 0px 0px;
       background: $light-blue;
       min-height: 300vh;
+      h1 {
+        position: absolute;
+        top: 3%;
+        left: 40%;
+        font-size: 5vw;
+        z-index: 2;
+        text-shadow: -5px 0px 0px #FFFFFF;
+      }
+      .avatar {
+        position: absolute;
+        top: -5%;
+        left: 30%;
+        transform: rotate(-14.86deg);
+      }
       .aboutme-box {
         display: flex;
-        // justify-content: space-between;
         top: 20%;
-        // position: absolute;
         padding: 20% 12%;
-      }
-    }
-    h1 {
-      position: absolute;
-      top: 3%;
-      left: 40%;
-      font-size: 5vw;
-      z-index: 2;
-      text-shadow: -5px 0px 0px #FFFFFF;
-    }
-    .avatar {
-      position: absolute;
-      top: -5%;
-      left: 30%;
-      transform: rotate(-14.86deg);
-    }
-    .aboutme-text {
-      width: 48%;
-      margin-right: 5%;
-      p {
-        font-size: 1.3vw;
-        font-family: "PT Sans";
-        color: $light-brown;
-        line-height: 2vw;
-      }
-      .sign {
-        margin-top: 10%;
-        font-family: "Mr Dafoe";
-        font-size: 6vw;
-        color: $dark-blue;
-        text-shadow: -2px 0px 0px #B9C9C7;
-        text-align: right;
+        .aboutme-text {
+          p {
+            font-size: 1.3vw;
+            font-family: "PT Sans";
+            color: $light-brown;
+            line-height: 2vw;
+          }
+          .sign {
+            margin-top: 10%;
+            font-family: "Mr Dafoe";
+            font-size: 6vw;
+            color: $dark-blue;
+            text-shadow: -2px 0px 0px #B9C9C7;
+            text-align: right;
+          }
+        }
       }
     }
     .knowledge {
@@ -63,22 +59,132 @@
       .line1-logos {
         display: flex;
         justify-content: space-around;
-        margin: 10% 10% 15% 0%;
+        // margin: 10% 10% 15% 0%;
         img {
           height: 4vw;
-          margin-left: 30%;
         }
-      }
+        .tooltip {
+          position: relative;
+          display: inline-block;
+          &:hover .tooltiptext{
+            visibility: visible;
+            opacity: 1;;
+          }
+        }
+        .tooltiptext {
+            visibility: hidden;
+            margin-top: 20%;
+            width: 120px;
+            background-color: white;
+            color: $light-blue;
+            text-align: center;
+            border-radius: 6px;
+            padding: 20% 0;
+            position: absolute;
+            z-index: 1;
+            top: 100%;
+            left: -10%;
+            font-weight: 700;
+          }
+        }
+
       .line2-logos {
         display: flex;
         justify-content: space-between;
         margin: 20% 10% 20% 0%;
         img {
           height: 4vw;
-          margin-right: 30%;
+          margin-right: 7.7vw;
         }
+        .tooltip {
+          position: relative;
+          display: inline-block;
+          &:hover .tooltiptext{
+            visibility: visible;
+            opacity: 1;;
+          }
+        }
+        .tooltiptext {
+            visibility: hidden;
+            margin-top: 10%;
+            width: 120px;
+            background-color: white;
+            color: $light-blue;
+            text-align: center;
+            border-radius: 6px;
+            padding: 7% 0;
+            position: absolute;
+            z-index: 1;
+            top: 100%;
+            left: -20%;
+            font-weight: 700;
+          }
       }
     }
   }
+}
+
+.wordCarousel {
+    font-size: 1.5vw;
+    font-family: "PT Sans";
+    font-weight: 400;
+    color: $light-brown;
+    display: flex;
+    width: 45vw;
+    margin: 10% 0 0 10%;
+    div {
+      overflow: hidden;
+      position: relative;
+      height: 65px;
+      padding-top: 10px;
+      margin-top: -10px;
+        li {
+            font-family: "PT Serif";
+            color: $light-brown;
+            font-style: italic;
+            font-weight: 700;
+            padding: 0 10px;
+            height: 45px;
+            margin-bottom: 45px;
+            display: block;
+        }
+    }
+}
+
+.flip2 { animation: flip2 6s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip3 { animation: flip3 8s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+.flip4 { animation: flip4 10s cubic-bezier(0.23, 1, 0.32, 1.2) infinite; }
+
+@keyframes flip2 {
+    0% { margin-top: -180px; }
+    5% { margin-top: -90px;  }
+    50% { margin-top: -90px; }
+    55% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
+}
+
+@keyframes flip3 {
+    0% { margin-top: -270px; }
+    5% { margin-top: -180px; }
+    33% { margin-top: -180px; }
+    38% { margin-top: -90px; }
+    66% { margin-top: -90px; }
+    71% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
+}
+
+@keyframes flip4 {
+    0% { margin-top: -360px; }
+    5% { margin-top: -270px; }
+    25% { margin-top: -270px; }
+    30% { margin-top: -180px; }
+    50% { margin-top: -180px; }
+    55% { margin-top: -90px; }
+    75% { margin-top: -90px; }
+    80% { margin-top: 0px; }
+    99.99% { margin-top: 0px; }
+    100% { margin-top: -270px; }
 }
 
