--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -12,6 +12,8 @@ $green: #E6ECDA;
 
 body {
   margin: 0;
+  background: $dark-cream;
+  color: $dark-brown;
   h1 {
     font-family: "PT Serif", Georgia, serif;
     font-weight: 400;
