FIX/STYLE fixed tooltips and styled contact section unfinished

--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -73,13 +73,13 @@
         }
         .tooltiptext {
             visibility: hidden;
-            margin-top: 20%;
+            margin-top: 1.5em;
             width: 120px;
             background-color: white;
             color: $light-blue;
             text-align: center;
             border-radius: 6px;
-            padding: 20% 0;
+            padding: 0.5em 0;
             position: absolute;
             z-index: 1;
             top: 100%;
@@ -106,13 +106,13 @@
         }
         .tooltiptext {
             visibility: hidden;
-            margin-top: 10%;
+            margin-top: 1.5em;
             width: 120px;
             background-color: white;
             color: $light-blue;
             text-align: center;
             border-radius: 6px;
-            padding: 7% 0;
+            padding: 0.5em 0;
             position: absolute;
             z-index: 1;
             top: 100%;
