--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,6 +1,93 @@
-.contact-container {
-  min-height: 60vh;
+.contact-header-container {
   background: $green;
   position: relative;
-  bottom: 12em;
+  padding-bottom: 12%;
+  bottom: 22em;
+  // text-align: center;
+  .contact-header {
+    padding: 5% 10%;
+    h1 {
+      font-family: "PT Serif";
+      font-weight: 700;
+      font-size: 6.5vw;
+      margin: 0;
+      color: $light-brown;
+    }
+    .contact-header-line2 {
+      color: $medium-blue;
+      position: relative;
+      width: 70%;
+      left: 30vw;
+    }
+  }
+}
+.contact-info-container {
+  width: 100%;
+  background: $light-cream;
+  border-radius: 200px 200px 0 0;
+  min-height: 60vh;
+  position: relative;
+  bottom: 35em;
+  h3 {
+      font-weight: 300;
+      font-size: 3vw;
+      color: $light-brown;
+    }
+  .email-box {
+    h3 {
+      padding-top: 5%;
+      position: relative;
+      right: 15vw;
+      text-align: right;
+      margin-bottom: 5%;
+    }
+    .email {
+      display: flex;
+      border-radius: 20px;
+      border: solid 1px $medium-blue;
+      width: 26vw;
+      padding: 0 0 0 5%;
+      color: $light-brown;
+      position: relative;
+      left: 15vw;
+      svg {
+        align-self: center;
+        margin-right: 3%;
+      }
+      h4 {
+        align-self: center;
+        font-family: "PT Sans";
+        font-weight: 300;
+        font-size: 1.8vw;
+      }
+    }
+  }
+  .social-box {
+    h3 {
+      padding-top: 5%;
+      position: relative;
+      left: 14vw;
+      width: 50%;
+      // text-align: right;
+    }
+  .contact-icons {
+        display: flex;
+        // justify-content: space-around;
+        position: relative;
+        // right: 15vw;
+        // width: 30%;
+        text-decoration: none;
+      }
+  }
+}
+.cv {
+  padding: 0 20%;
+  h4 {
+    font-size: 2vw;
+    font-weight: 300;
+    color: $light-brown;
+    text-align: center;
+    padding: 10%;
+    background: white;
+  }
 }
