FIX fixed contact links and section display

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/main.css">
     <script src="../js/script.js" async></script>
     <title>{{ page.title }}</title>
-   <!--  <link rel="shortcut icon" href="assets/images/favicon.png"> -->
+    <link rel="shortcut icon" href="../assets/images/favicon.png">
 </head>
 <body>
   {{ content }}
