FIX/ border radius

--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -5,7 +5,7 @@
     padding-top: 10%;
     .aboutme-card {
       position: relative;
-      border-radius: 500px 500px 0px 0px;
+      border-radius: 30vw 30vw 0 0;
       background: $light-blue;
       // min-height: 300vh;
       h1 {
