--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -28,7 +28,7 @@
   .contact-info-container {
     width: 100%;
     background: $light-cream;
-    border-radius: 200px 200px 0 0;
+    border-radius: 17vw 17vw 0 0;
     min-height: 60vh;
     padding-bottom: 5%;
     h3 {
