--- a/_sass/_works.scss
+++ b/_sass/_works.scss
@@ -2,7 +2,7 @@
   background: white;
   padding-bottom: 5%;
   position: relative;
-  border-radius: 300px 300px 0 0;
+  border-radius: 20vw 20vw 0 0;
   bottom: 20em;
   .work-header {
     width: 100%;
