ADD/FIX added preloader and fixed scrollfade in

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="../assets/images/favicon.png">
 </head>
 <body>
+  <div id="preloader"></div>
   {{ content }}
 </body>
 </html>
