--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -122,4 +122,23 @@
       }
     }
   }
+  .banner-lineround {
+  position: absolute;
+  right: 16%;
+  top: 23vw;
+  font-size: 0.7em;
+  h3 {
+    span {
+      top: -60px;
+      transform-origin: 0 70px;
+    }
+  }
+  h4 {
+    span {
+      top: -60px;
+      transform-origin: 0 70px;
+    }
+  }
+}
+
 }
