FIX/ work and contact container bottom responsive

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,7 +1,7 @@
   #contact {
     background: $green;
     position: relative;
-    bottom: 22em;
+    bottom: 25vw;
     .contact-header {
       padding: 5% 10%;
       h1 {
