--- a/_sass/_works.scss
+++ b/_sass/_works.scss
@@ -3,7 +3,7 @@
   padding-bottom: 5%;
   position: relative;
   border-radius: 20vw 20vw 0 0;
-  bottom: 20em;
+  bottom: 25vw;
   .work-header {
     width: 100%;
     padding-top: 6%;
