--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -223,3 +223,15 @@
     99.99% { margin-top: 0px; }
     100% { margin-top: -270px; }
 }
+
+@media only screen and (max-width: 600px) {
+  #aboutme {
+    .aboutme-container {
+      .aboutme-card {
+        .aboutme-box {
+            display: block;
+        }
+      }
+    }
+  }
+}
