--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -228,8 +228,26 @@
   #aboutme {
     .aboutme-container {
       .aboutme-card {
+        h1 {
+          top: -1%;
+          left: 40%;
+          font-size: 8vw;
+        }
+        .underline-aboutme {
+          width: 35vw;
+          height: 1vw;
+        }
         .aboutme-box {
-            display: block;
+          display: block;
+          .aboutme-text {
+            p {
+              font-size: 3vw;
+              line-height: 5vw;
+            }
+            .sign {
+              font-size: 10vw;
+            }
+          }
         }
       }
     }
