RESPONSIVE/ about me logos and vertical carousel

--- a/_sass/_aboutme.scss
+++ b/_sass/_aboutme.scss
@@ -237,6 +237,11 @@
           width: 35vw;
           height: 1vw;
         }
+        .avatar {
+          top: -3%;
+          left: 20%;
+          width: 23%;
+        }
         .aboutme-box {
           display: block;
           .aboutme-text {
@@ -246,6 +251,30 @@
             }
             .sign {
               font-size: 10vw;
+            }
+          }
+          .knowledge {
+            width: 100%;
+            margin-top: 20%;
+            margin-left: 0%;
+            h2 {
+              text-align: left;
+              font-size: 5vw;
+            }
+            .line1-logos, .line2-logos {
+              margin: 10%;
+              img {
+                height: 10vw;
+                margin: 0;
+              }
+              .tooltiptext {
+                display: none;
+              }
+            }
+            .wordCarousel {
+              font-size: 3vw;
+              width: 110%;
+              margin: 10% 0 0 0;
             }
           }
         }
