FIX/RESPONSIVEphone banner height

--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -85,7 +85,7 @@
 
 @media only screen and (max-width: 600px) {
   .banner {
-    min-height: 50vh;
+    min-height: 70vw;
     h1 {
     color: $dark-brown;
     font-size: 15vw;
