--- a/_sass/_works.scss
+++ b/_sass/_works.scss
@@ -66,15 +66,29 @@
       opacity: 1;
       transition: opacity 0.3s ease-in 0.4s;
     }
-
-    @media(max-width: 480px) {
-      .container{
-        width: 100vw;
-      }
-      .panel:nth-of-type(4),
-      .panel:nth-of-type(5) {
-        display: none;
-      }
-    }
   }
 }
+
+ @media(max-width: 600px) {
+      #work {
+        .carousel-container{
+          width: 90vw;
+          .panel {
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 90vh;
+            border-radius: 50px;
+            color: #ffffff;
+            flex: 1;
+            margin: 10px;
+            position: relative;
+            transition: flex 0.7s ease-in;
+          }
+          .panel:nth-of-type(3),
+          .panel:nth-of-type(4) {
+            display: none;
+          }
+        }
+      }
+    }
