FIX transition work carousel safari

--- a/_sass/_works.scss
+++ b/_sass/_works.scss
@@ -43,6 +43,11 @@
       margin: 10px;
       position: relative;
       transition: flex 0.7s ease-in;
+      -webkit-transition: all 0.7s ease-in;
+      -moz-transition: all 0.7s ease-in;
+      -ms-transition: all 0.7s ease-in;
+      -o-transition: all 0.7s ease-in;
+      transition: all 0.7s ease-in;
     }
     .panel a {
       font-family: "PT Sans";
@@ -64,6 +69,10 @@
 
     .panel.active a {
       opacity: 1;
+      -webkit-transition: opacity 0.3s ease-in 0.4s;
+      -moz-transition: opacity 0.3s ease-in 0.4s;
+      -ms-transition: opacity 0.3s ease-in 0.4s;
+      -o-transition: opacity 0.3s ease-in 0.4s;
       transition: opacity 0.3s ease-in 0.4s;
     }
   }
