--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -143,7 +143,7 @@
   }
   .banner-lineround {
     position: absolute;
-    right: 19%;
+    right: 20vw;
     top: 23vw;
     font-size: 0.7em;
     h3 {
