--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -145,6 +145,7 @@
         font-size: 5vw;
       }
       .email-box {
+        width: 99%;
         .underline-email {
         top: 10vw;
         right: 13vw;
@@ -154,8 +155,10 @@
           border-radius: 5px;
           width: 35vw;
           padding: 0 5vw 0 3.5vw;
+          margin: 0;
           top: 3vw;
-          left: 18vw;
+          right: 50%;
+          left: 0;
           .email-icon {
             width: 5vw;
           }
@@ -175,6 +178,7 @@
       .social-box {
         position: relative;
         margin-bottom: 5%;
+        width: 98%;
         .underline-sns {
           top: 10vw;
           left: 53vw;
