FIX/RESpphone email center

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -157,8 +157,7 @@
           padding: 0 5vw 0 3.5vw;
           margin: 0;
           top: 3vw;
-          right: 50%;
-          left: 0;
+          left: 18vw;
           .email-icon {
             width: 5vw;
           }
