FIX/RESpphone cv contact

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -206,13 +206,13 @@
       .cv {
         padding: 0 5%;
         .circle-cv {
-          top: 8.3vw;
+          top: 9vw;
           right: 14vw;
           width: 9vw;
         }
         h4 {
           font-size: 4vw;
-          padding: 10%;
+          padding: 10vw;
         }
       }
     }
