FIX/RESpphone cv circle none

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -206,9 +206,10 @@
       .cv {
         padding: 0 5%;
         .circle-cv {
-          top: 9vw;
-          right: 14vw;
-          width: 9vw;
+          display: none;
+          // top: 9vw;
+          // right: 14vw;
+          // width: 9vw;
         }
         h4 {
           font-size: 4vw;
