FIX/RESpphone cv padding bottom

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -142,7 +142,7 @@
   #contact {
     .contact-info-container {
       min-height: none;
-      padding-bottom: 5%;
+      padding-bottom: 1em;
       h3 {
         font-size: 5vw;
       }
