FIX/RESpphone psace betweenabout, work and contact sections

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -140,6 +140,7 @@
 
 @media only screen and (max-width: 600px) {
   #contact {
+    bottom: 40vw;
     .contact-info-container {
       min-height: none;
       padding-bottom: 1em;
