--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -1,8 +1,8 @@
 .banner {
   padding: 0;
-  margin-top: 5em;
   position: relative;
   min-height: 40vw;
+  margin-top: 5%;
   h1 {
     color: $dark-brown;
     font-size: 8vw;
