STYLE/ fixed blur navbar responsive

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -87,6 +87,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .top-header {
+    display: flex;
+    height: 20vw;
+  }
   .navbar {
     width: 100vw;
     right: -100vw;
