--- a/_sass/_banner.scss
+++ b/_sass/_banner.scss
@@ -2,7 +2,7 @@
   padding: 0;
   position: relative;
   min-height: 40vw;
-  margin-top: 5%;
+  margin-top: 5em;
   h1 {
     color: $dark-brown;
     font-size: 8vw;
