--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -5,7 +5,6 @@
   position: fixed;
   top: 0;
   z-index: 2;
-  backdrop-filter: blur(10px);
   .logo {
     text-decoration: none;
     color: $dark-blue;
@@ -36,7 +35,7 @@
 
 .navbar {
   width: 25rem;
-  height: 100%;
+  height: 100vh;
   background-color: $medium-blue;
   position: fixed;
   top: 0;
@@ -90,6 +89,11 @@
   .top-header {
     display: flex;
     height: 20vw;
+    backdrop-filter: blur(10px);
+  }
+  .hamburger-menu {
+    top: 5.5vw;
+    right: 4vw;
   }
   .navbar {
     width: 100vw;
@@ -119,6 +123,10 @@
   }
   .change {
     right: 0;
+  }
+  .hamburger-menu {
+    top: 5.5vw;
+    right: 4vw;
   }
   .nav-item {
     margin-left: 0%;
