FIX/RESPphone contact min height

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -142,7 +142,7 @@
   #contact {
     bottom: 40vw;
     .contact-info-container {
-      min-height: none;
+      min-height: 0;
       padding-bottom: 1em;
       h3 {
         font-size: 5vw;
